--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <section id="app1">
+    <h2>computed</h2>
+    <p>{{reverseMessage}}</p>
+    <p>{{reverseMessageMethod()}}</p>
+  </section>
   <script src="https://unpkg.com/vue@3.1.5"></script>
-  <script src="js/app.js"></script>
+  <script src="js/computed.js"></script>
 </body>
 </html>
