--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
     <p>{{reverseMessage}}</p>
     <p>{{reverseMessageMethod()}}</p>
   </section>
+  <hr>
+  <section id="app2">
+    <p>base price: <input type="text" v-model="basePrice"></p>
+    <p>tax included price: <input type="text" v-model="taxIncludedPrice"></p>
+  </section>
+  <hr>
+  <section id="app3">
+    <h2>キャッシュ</h2>
+    <h3>Computed:キャッシュあり</h3>
+    <ol>
+      <li>{{computedNumber}}</li>
+      <li>{{computedNumber}}</li>
+      <li>{{computedNumber}}</li>
+    </ol>
+    <h3>methods:キャッシュなし</h3>
+    <ol>
+      <li>{{methodsNumber()}}</li>
+      <li>{{methodsNumber()}}</li>
+      <li>{{methodsNumber()}}</li>
+    </ol>
+  </section>
   <script src="https://unpkg.com/vue@3.1.5"></script>
   <script src="js/computed.js"></script>
+  <script src="js/getter_setter.js"></script>
+  <script src="js/kyash.js"></script>
 </body>
 </html>
